# Djinni-Test

./: README.md  build.gradle  prime.djinni  run_djinni.sh
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/anatoly/djinnitest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: PrimeGeneratorImpl.cpp  PrimeGeneratorImpl.hpp  native-lib.cpp
app/src/main/java/com/example/anatoly/djinnigenerated/: PrimeGeneratorDjinni.java
app/src/main/java/com/example/anatoly/djinnitest/: MainActivity.kt  MainViewModel.kt  PrimeNumbersAdapter.kt  PrimeNumbersService.kt
app/src/main/java/com/example/anatoly/djinnitest/core/: MainApplication.kt
app/src/main/java/com/example/anatoly/djinnitest/core/dagger/: AppComponent.kt
app/src/main/java/com/example/anatoly/djinnitest/core/dagger/modules/: PrimeGeneratorModule.kt
app/src/main/java/com/example/anatoly/djinnitest/dagger/: MainSubComponent.kt
app/src/main/java/com/example/anatoly/djinnitest/paging/: NetworkState.kt  NetworkStateItemViewHolder.kt  PrimeNumberViewHolder.kt  PrimeNumbersAdapter.kt  PrimeNumbersDataSource.kt
app/src/main/jni/djinnigenerated/cpp/: prime_generator_djinni.hpp
app/src/main/jni/djinnigenerated/jni/: NativePrimeGeneratorDjinni.cpp  NativePrimeGeneratorDjinni.hpp
app/src/main/res/font/: roboto_bold_family.xml  roboto_light_family.xml
app/src/main/res/layout/: activity_main.xml  item_prime_number.xml
app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
app/src/test/java/com/example/anatoly/djinnitest/: ExampleUnitTest.kt
(+1 files in other folders)
